# ml_collisions-python

./: main.py
cpp/: CMakeLists.txt  README  create_torchscript_model.py  test_model.cpp
